# streamlit_reto_final

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/: Home.py  app.py
src/config/: __init__.py  constants.py
src/pages/: 01_Tablero.py  02_Predicciones.py  dashboard.py  predictions.py
src/utils/: __init__.py  functions.py
